Implement github link

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
           <li><a href="https://twitter.com/Rubenkinnart" target="_blank"><i class="bi bi-twitter"></i></a></li>
           <li><a href="https://www.instagram.com/ruben.kinnart/" target="_blank"><i class="bi bi-instagram"></i></a>
           </li> -->
-          <li><a href="https://www.linkedin.com/in/ruben-kinnart" target="_blank"><i class="bi bi-linkedin"></i></a>
-          </li>
+          <li><a href="https://www.linkedin.com/in/ruben-kinnart" target="_blank"><i class="bi bi-linkedin"></i></a></li>
+          <li><a href="https://github.com/RubenKinnartPXL" target="_blank"><i class="bi bi-github"></i></a></li>
         </ul>
       </div>
     </div>
@@ -110,13 +110,20 @@
               <p class="p-heading">Competenties en talenten</p>
               <p class="separator">Hogeschool PXL biedt studenten aan een Thalento-test in te vullen. Na het invullen van een vragenlijst wordt er een attest op basis van je kernkwadranten gevormd. In mijn attest staat dat ik vooral meewerkend ben, hier ga ik volledig mee akkoord. Hoewel ik minder gericht ben een vooraanstaande rol op te nemen in een team ben ik sterk betrokken bij de activiteiten.</p>
               <p class="separator">Andere eigenschappen die ik op het rapport terug kon vinden over mezelf zijn ook dat ik een pragmaticus ben, dat ik uitvoerend ben en dat ik extravert ben. Over het algemeen klopt dit attest, al ben ik volgens mezelf meer introvert dan extravert. Ik vind het namelijk leuk om alleen en op mijn eigen tempo aan iets te werken. Ik denk graag na over een probleem waarna mijn uitvoerend karakter het overneemt om acties tot een goed einde te brengen.</p>
-              <p class="separator">Tijdens de opleiding zijn deze kernkwadranten nog gegroeid. De pop-sessies die georganiseerd werden hebben mij geholpen als introvert persoon. Dit zijn sessies om je te helpen bij je persoonlijke ontwikkeling. Ze hebben mij geholpen om meer extravert te worden. Om initiatief te nemen en op te treden binnen een groep. Ook lieten ze mij mijn eigen sterktes en zwaktes beter inzien om zelf hieraan te werken.</p>
+              <p class="separator">Tijdens de opleiding zijn deze kernkwadranten nog gegroeid. De pop-sessies die georganiseerd werden hebben mij geholpen als introvert persoon. Dit zijn sessies om je te helpen bij je persoonlijke ontwikkeling. Ze hebben mij geholpen om meer extravert te worden, om initiatief te nemen en op te treden binnen een groep. Ook lieten ze mij mijn eigen sterktes en zwaktes beter inzien om zelf hieraan te werken.</p>
             </div>
             </div>
           </div>
+          <br><br>
+          <div class="services-block text-center">
+            <a href="./assets/CV_RubenKinnart.pdf" target="_blank">
+              <i class="bi bi-briefcase"></i>
+              <p class="separator">Klik hier om mijn CV te bekijken.</p>
+            </a>
+          </div>
       </div>
+      
     </div><!-- End About Section -->
-
 
 
     <!-- ======= All activities Section ======= -->
@@ -354,8 +361,8 @@
           <li><a href="https://twitter.com/Rubenkinnart" target="_blank"><i class="bi bi-twitter"></i></a></li>
           <li><a href="https://www.instagram.com/ruben.kinnart/" target="_blank"><i class="bi bi-instagram"></i></a>
           </li> -->
-          <li><a href="https://www.linkedin.com/in/ruben-kinnart" target="_blank"><i class="bi bi-linkedin"></i></a>
-          </li>
+          <li><a href="https://www.linkedin.com/in/ruben-kinnart" target="_blank"><i class="bi bi-linkedin"></i></a></li>
+          <li><a href="https://github.com/RubenKinnartPXL" target="_blank"><i class="bi bi-github"></i></a></li>
         </ul>
 
       </div>
