Implemented all text/images

--- a/activity1.html
+++ b/activity1.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/pxl.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -68,7 +68,7 @@
               <div class="container-main single-main">
                 <div class="col-md-12">
                   <div class="block-main mb-30">
-                    <img src="assets/img/activity1_00.jpeg" class="img-responsive" alt="Team" width="100%">
+                    <img src="assets/img/activity1/activity1_00.jpeg" class="img-responsive" alt="Team" width="100%">
                     <div class="content-main single-post padDiv">
                       <div class="journal-txt">
                         <h4><a href="#">Hackathon Sint-Oda</a></h4>
@@ -88,19 +88,19 @@
                         <blockquote> 
                           Ons team bestond uit 2 softwaremanagers, Robbe Daemen en Kjen Noukens, en 3 programmeurs, Zoe Viola, Bugra Akdag en ik.
                           <br><br>
-                          <img src="assets/img/activity1_01.png" class="img-responsive" alt="Team" width="100%">
+                          <img src="assets/img/activity1/activity1_01.png" class="img-responsive" alt="Team" width="100%">
                         </blockquote>
                       <h4>Kern</h4>
                         <p class="mb-30">2 studenten ergotherapie focussen zich voor hun bachelorproef op mensen met een verstandelijke beperking. Tot op heden zijn er weinig tablet- en computergames toegankelijk voor deze doelgroep. Hun onderwerp is het ontwikkelen van een screeningsinstrument in functie van het meten van gebruiksvriendelijkheid van computer- en tabletgames voor mensen met een ernstige meervoudige en matig tot diep verstandelijke beperking. Een screeningslijst kan ontwikkelaars helpen om een geschikt spel voor hen te ontwikkelen. Deze hackathon helpt bij dit onderzoek.</p>
                       <p class="mb-30">Het doel van de hackathon van Sint-Oda was om een mobiele game te maken voor mensen met een verstandelijke beperking zodat deze studenten hun onderzoek verder konden zetten. Hier kregen we 2 dagen te tijd voor. Elk deelnemend team kreeg een thema gekozen uit de 4 seizoenen. Wij hadden herfst als thema gekregen.</p>
-                      <img src="assets/img/activity1_02.png" class="img-responsive" alt="Theme" style="float: right; max-width: 200px;">
+                      <img src="assets/img/activity1/activity1_02.png" class="img-responsive" alt="Theme" style="float: right; max-width: 200px;">
                       <p class="mb-30">Het team zag de opdracht als een uitdaging en we hadden allemaal zin om eraan te beginnen. De eerste dag was er een bijeenkomt van alle teams waarbij we uitleg kregen over de opdracht en over Sint-Oda zelf. Hier werd alle uitleg gegeven over de eventuele technologieën die konden worden gebruikt maar ook over Sint-Oda zelf.  Zo kwam ook naar voren dat er rekening moet worden gehouden met de inwoners van het dienstencentrum. Het is belangrijk dat de spellen niet te moeilijk worden gemaakt en dat er veel visuele en auditieve aspecten in voorkomen. Bij het herfst thema is het de bedoeling dat er een boom voorgesteld wordt waarna de gebruiker op de bladeren van de boom kan klikken om deze te laten vallen.</p>
                       
                       <p class="mb-30">Aangezien we allemaal nog geen ervaring in game-development hadden we besloten om alle taken samen te doen en begonnen we met research te doen. Uiteindelijk hadden we een goede basis kennis om dit in de praktijk te gebruiken. Ook hadden we afbeeldingen van bladeren en van een kale boom gevonden om deze te gebruiken als boom. Nadat de visualisatie gelukt was kwam het moeilijk gedeelte eraan, het laten vallen van de bladeren bij een klik. Na veel proberen en uittesten namiddag hadden we op het einde van de dag een werkend maar standaard spel.</p>
                       <p class="mb-30">De tweede dag waren we klaar om de applicatie af te werken. We hebben geluiden en bewegingen toegevoegd om alles levendiger te maken. Ook hebben we een hand toegevoegd zodat de spelers weten wat ze moeten doen. Dit was één van de tips die we kregen om het makkelijker te maken voor de inwoners van Sint-Oda.</p>
-                      <img src="assets/img/activity1_03.png" class="img-responsive" alt="Demomoment" width="100%">
+                      <img src="assets/img/activity1/activity1_03.png" class="img-responsive" alt="Game visuals" width="100%">
                       <p class="mb-30">Op het einde van de tweede dag werd er een demomoment voorzien. Hier kon elk team hun spel tonen en er uitleg bij geven. Het waren allemaal goede resultaten en ook bij ons werd er een werkend product getoond.</p>
-                      <img src="assets/img/activity1_04.png" class="img-responsive" alt="Demomoment" width="100%">
+                      <img src="assets/img/activity1/activity1_04.png" class="img-responsive" alt="Demomoment" width="100%">
                       <br><br>
                       <h4>Reflectie</h4>
                       <p class="mb-30">We hebben in 2 dagen een mooi spel uitgewerkt en afgeleverd. We begonnen stroef en onwetend maar naarmate we verder gingen lukte het allemaal beter en geraakten we goed vooruit.
