--- a/index.html
+++ b/index.html
@@ -272,11 +272,55 @@
               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                 data-bs-parent="#accordionActivities">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse
-                  plugin adds the appropriate classes that we use to style each element. These classes control the
-                  overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also worth noting that just about any HTML
-                  can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  <div class="list-group-item">
+                    <span style="float: right;"><span>20/04/2020</span> - <span>26 uur</span></span>
+                    <h6 class="list-group-item-heading">
+                      Projectweek 2TIN - <a target="_blank"
+                        href="http://www.pxl.be/">@Hogeschool PXL</a>
+                    </h6>
+                    <p class="list-group-item-text">
+                      <strong style="color: #b8a07e;">PXL activiteit</strong> - Een volledige week gericht op het leren werken aan een project. Voornamelijk het werken in groepsverband.
+                    </p>
+                  </div>
+                  <div class="list-group-item">
+                    <span style="float: right;"><span>10 uur</span></span>
+                    <h6 class="list-group-item-heading">
+                      POP-sessies - <a target="_blank"
+                        href="http://www.pxl.be/">@Hogeschool PXL</a>
+                    </h6>
+                    <p class="list-group-item-text">
+                      <div class="list-group-item">
+                        <span style="float: right;"><span>12/02/2020</span></span>
+                        <h6 class="list-group-item-heading">
+                          Feedback: “The key to improvement” - <a target="_blank"
+                            href="http://www.pxl.be/">@Hogeschool PXL</a>
+                        </h6>
+                        <p class="list-group-item-text">
+                          <strong style="color: #b8a07e;">PXL activiteit</strong> - Het geven en ontvangen van kritiek of feedback kan best moeilijk zijn. Tijdens deze sessie werd dit ons aangeleerd en aangetoond hoe belangrijk dit kan zijn.
+                        </p>
+                      </div>
+                      <div class="list-group-item">
+                        <span style="float: right;"><span>06/03/2020</span></span>
+                        <h6 class="list-group-item-heading">
+                          Brein aan het werk. Niet storen! - <a target="_blank"
+                            href="http://www.pxl.be/">@Hogeschool PXL</a>
+                        </h6>
+                        <p class="list-group-item-text">
+                          <strong style="color: #b8a07e;">PXL activiteit</strong> - Een sessie over het behouden van aandacht en concentratie. Er werd aangetoond hoe je best kan focussen op belangrijke activiteiten en hoe deze aandacht behouden kan blijven. Het verbeteren van aandacht leidt tot het verzetten van meer werk op minder tijd. 
+                        </p>
+                      </div>
+                      <div class="list-group-item">
+                        <span style="float: right;"><span>03/03/2020</span></span>
+                        <h6 class="list-group-item-heading">
+                          POPping: Van intentie naar actie - <a target="_blank"
+                            href="http://www.pxl.be/">@Hogeschool PXL</a>
+                        </h6>
+                        <p class="list-group-item-text">
+                          <strong style="color: #b8a07e;">PXL activiteit</strong> - Een sessie over persoonlijkheden. Hier werd gereflecteerd over onze eigen persoonlijkheid en de persoonlijkheid van anderen. Door te reflecteren over de verschillende lagen van je persoonlijkheid kunnen IT’ers hun opleiding en loopbaan waarderend in kaart brengen en achterhalen wat zij wensen voor hun toekomst.
+                        </p>
+                      </div>
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -325,7 +369,7 @@
             <div class="col-lg-6 col-md-6">
               <div class="selection-info">
 
-                <a href="activity1.html"><img src="assets/img/activity1_00.jpeg" class="img-responsive" alt="img"></a>
+                <a href="activity1.html"><img src="assets/img/activity1/activity1_00.png" class="img-responsive" alt="img"></a>
 
                 <div class="selection-txt">
 
@@ -341,7 +385,7 @@
             <div class="col-lg-6 col-md-6">
               <div class="selection-info">
 
-                <a href="activity2.html"><img src="assets/img/blog-post-2.jpg" class="img-responsive" alt="img"></a>
+                <a href="activity2.html"><img src="assets/img/activity2/activity2_00.jpg" class="img-responsive" alt="img"></a>
 
                 <div class="selection-txt">
 
@@ -355,10 +399,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-6 col-md-6">
               <div class="selection-info">
 
-                <a href="activity3.html"><img src="assets/img/blog-post-3.jpg" class="img-responsive" alt="img"></a>
+                <a href="activity3.html"><img src="assets/img/activity3/activity3_00.png" class="img-responsive" alt="img"></a>
 
                 <div class="selection-txt">
 
@@ -371,30 +415,15 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-6 col-md-6">
               <div class="selection-info">
 
-                <a href="activity4.html"><img src="assets/img/blog-post-3.jpg" class="img-responsive" alt="img"></a>
+                <a href="activity4.html"><img src="assets/img/activity4/activity4_00.png" class="img-responsive" alt="img"></a>
 
                 <div class="selection-txt">
 
                   <h4><a href="activity4.html">Activity 4</a></h4>
                   <p class="separator">Go to activity 4
-                  </p>
-
-                </div>
-
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-              <div class="selection-info">
-
-                <a href="activity4.html"><img src="assets/img/blog-post-3.jpg" class="img-responsive" alt="img"></a>
-
-                <div class="selection-txt">
-
-                  <h4><a href="activity4.html">Activity 5</a></h4>
-                  <p class="separator">Go to activity 5
                   </p>
 
                 </div>
