--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                 attest, al ben ik volgens mezelf meer introvert dan extravert. Ik vind het namelijk leuk om alleen en op
                 mijn eigen tempo aan iets te werken. Ik denk graag na over een probleem waarna mijn uitvoerend karakter
                 het overneemt om acties tot een goed einde te brengen.</p>
+                <img src="assets/img/kernkwadranten.png" class="img-responsive" alt="seminarie blockchain">
               <p class="separator">Tijdens de opleiding zijn deze kernkwadranten nog gegroeid. De pop-sessies die
                 georganiseerd werden hebben mij geholpen als introvert persoon. Dit zijn sessies om je te helpen bij je
                 persoonlijke ontwikkeling. Ze hebben mij geholpen om meer extravert te worden, om initiatief te nemen en
