--- a/activity2.html
+++ b/activity2.html
@@ -93,16 +93,10 @@
                       
                       <p class="mb-30">Aangezien low code integratie biedt met bestaande IT-systemen en platforms zoals Oracle en Microsoft zijn er meerdere frameworks op de markt om te gebruiken. Na de algemene uitleg kwamen er verschillende bedrijven uitleg geven over deze frameworks en hoe zij ermee werken. Zo zijn de bedrijven Grasshopper Academy, iAdvice, Brightfox en Providit hun bedrijf en huidige frameworks komen voorstellen.</p>
                       <p class="mb-30">Op dag één kwam het bedrijf Brightfox uitleg geven over salesforce. Salesforce is een zeer uitgebreid platform dat vele toepassingen bied, van CRM tot cloud computing. Ook kwam het bedrijf iAdvise spreken over het framework dat zei gebruiken, namelijk Oracle Apex. Op dag twee kwam het bedrijf Providit hun bedrijf voorstellen en meer uitleg geven over hun framework genaamd Outsystems.</p>
-                      <img src="assets/img/activity2/activity2_01.png" class="img-responsive" alt="innovatieroute" width="50%" style=" display: block;
-                      margin-left: auto;
-                      margin-right: auto;
-                      width: 50%;">
+                      <img src="assets/img/activity2/activity2_01.png" class="img-responsive" alt="innovatieroute" width="100%" >
                       
                       <p class="mb-30">Al deze frameworks gebruiken low code om het applicatieproces te versnellen. Elk bedrijf gaf nog eens kort weer wat zij onder low code verstaan en hoe ze dit toepassen binnen hun bedrijf. Ze lieten voorbeelden van het dagelijkse leven zien en toonden aan dat het veel meer voordelen bevat dan het traditioneel programmeren. Na elke uitleg werd er een demo voorzien. Hierbij mochten we meedoen en werd er getoond hoe er gewerkt wordt binnen low code. Deze demo telkens met het framework at gebruikt wordt binnen het bedrijf. Bij elk framework werd het duidelijk dat programmeren bijna volledig grafisch gebeurd.</p>
-                      <img src="assets/img/activity2/activity2_02.png" class="img-responsive" alt="innovatieroute" width="50%" style=" display: block;
-                      margin-left: auto;
-                      margin-right: auto;
-                      width: 50%;">
+                      <img src="assets/img/activity2/activity2_02.png" class="img-responsive" alt="innovatieroute" width="100%">
                       <p class="mb-30">Elke demo was interessant en liet zien hoe snel er iets gemaakt kan worden met low code. Omdat we dit mee mochten doen konden we dit ook zelf ervaren. Ook was het leuk dat we met meerde frameworks mochten werken aangezien dit liet zien dat er binnen low code ook nog verschillende werkwijzen zijn.</p>
                       <br><br>
                       <h4>Reflectie</h4>
