--- a/activity3.html
+++ b/activity3.html
@@ -119,10 +119,7 @@
                         waar de klant naar gevraagd heeft. Elk product heeft ook een score, hoe hoger de score hoe
                         belangrijker het product is. Wie op het einde de meeste punten had verzameld won het spel.</p>
 
-                        <img src="assets/img/activity3/activity3_01.png" class="img-responsive" alt="seminarie agile" width="50%" style=" display: block;
-                        margin-left: auto;
-                        margin-right: auto;
-                        width: 50%;">
+                        <img src="assets/img/activity3/activity3_01.png" class="img-responsive" alt="seminarie agile" width="100%">
 
                       <p class="mb-30">Op het eerste zicht leek dit een makkelijke opgave, al kwam er meer bij kijken.
                         Zo was er maar een gelimiteerd aantal legoblokken beschikbaar per team en kan de klant zijn
