--- a/activity4.html
+++ b/activity4.html
@@ -117,10 +117,7 @@
                         leven. Ook werd er aangehaald dat blockchain niet altijd even veilig was. Zo werd in het
                         verleden velen identiteitsdiefstallen vernomen. Dit laat zien dat ook blockchain nog niet op
                         punt staat en dat er nog veel optimalisaties kunnen worden toegevoegd om dit te verbeteren.</p>
-                        <img src="assets/img/activity4/activity4_01.jpg" class="img-responsive" alt="seminarie blockchain" width="50%" style=" display: block;
-                        margin-left: auto;
-                        margin-right: auto;
-                        width: 50%;">
+                        <img src="assets/img/activity4/activity4_01.jfif" class="img-responsive" alt="seminarie blockchain" width="100%">
                       <p class="mb-30">Tijdens het praktijk gedeelte moesten we in groep een toepassing van blockchain
                         uitwerken. We kregen even de tijd om na te denken waarna we onze zelf gevonden toepassing konden
                         presenteren aan de groep. De oefening liet zien dat wij als studenten veel extra toepassingen
